--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.64.1",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "formik": "^2.4.6",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "notistack": "^3.0.1",
@@ -21,8 +22,11 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
-    "sort-by": "^1.2.0"
+    "react-select": "^5.9.0",
+    "sort-by": "^1.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
