--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.10",
     "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
     "formik": "^2.4.6",
