--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.15.10",
     "yup": "^1.6.1"
   },
   "devDependencies": {
