--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "notistack": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.0",
     "react-quill": "^2.0.0",
