--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.0",
+    "react-loading-skeleton": "^3.5.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
