--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^7.1.1",
     "react-select": "^5.9.0",
+    "recharts": "^2.15.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.15.10",
     "yup": "^1.6.1"
